[package]
name = "tuta-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# should not depend on cli but because bin is not in its own crate (yet) we have to use it
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "49beceaba52f05921fbd42043a23ff055551ef1d", features = ["cli"] }
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.40"
async-trait = "0.1.77"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "49beceaba52f05921fbd42043a23ff055551ef1d", features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "tutasdk"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"