[package]
edition = "2021"
name = "tuta-sdk"
version = "247.241007.0"

[dependencies]
async-trait = "0.1.77"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
minicbor = { version = "0.24.2", features = ["std", "alloc"] }
thiserror = "1.0.60"
base64 = "0.22.1"
aes = { version = "0.8.4", features = ["zeroize"] }
cbc = { version = "0.1.2", features = ["std", "zeroize"] }
sha2 = "0.10.8"
const-hex = { version = "1.12.0", features = ["serde"] }
hmac = "0.12.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
hkdf = "0.12.4"
argon2 = { version = "0.5.3", features = ["zeroize"] }
curve25519-dalek = "4.1.2"
pqcrypto-kyber = { version = "0.7.9", default-features = false, features = [
    "std",
] }
pqcrypto-traits = "0.3.4"
rsa = "0.9.6"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde_bytes = "0.11.14"
futures = "0.3.30"
log = "0.4.22"
simple_logger = "5.0.0"
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "13a1c559cb3708eeca40dcf95dc8b3ccccf3b88c" }

# only used for the native rest client
hyper = { version = "1.4.1", features = ["client"], optional = true }
hyper-util = { version = "0.1.9", features = ["full"], optional = true }
http-body-util = { version = "0.1.2", optional = true }
hyper-rustls = { version = "0.27.3", features = ["ring", "http2", "rustls-platform-verifier"], optional = true }
rustls = { version = "*", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_log = "0.1.3"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "13a1c559cb3708eeca40dcf95dc8b3ccccf3b88c", features = [
    "build",
] }


[features]
net = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:hyper-rustls", "dep:rustls"]

[dev-dependencies]
tuta-sdk = { path = ".", features = ["net"] }
mockall = { version = "0.13.0" }
mockall_double = { version = "0.3.1" }
rand = { version = "0.8.5" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "tutasdk"

[lints.clippy]
new_without_default = "allow"     # we don't want to implement Default for everything
enum_variant_names = "allow"      # creates more problems than it solves
let_and_return = "allow"          # we commonly use this style
too_many_arguments = "allow"      # this is fine

# "pedantic" lints worth warning on
manual_let_else = "warn"
must_use_candidate = "warn"
unused_async = "warn"
implicit_clone = "warn"
explicit_iter_loop = "warn"

[[example]]
name = "create_session"
path = "examples/create_session.rs"
required-features = ["net"]